# verix-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  refactor-plan.md
.claude/: prompts.md
backend/: .dockerignore  .env.example  Dockerfile  OLLAMA_SETUP.md  entrypoint.sh  pyproject.toml  test_parallel_processing.py  test_providers.py
backend/app/: celery_app.py  main.py
backend/app/agents/: document_agent.py  multi_agent_system.py
backend/app/api/: providers.py
backend/app/api/routes/: __init__.py  analytics.py  chat.py  datasets.py  documents.py  enhanced.py  jobs.py  summarization.py  system.py
backend/app/core/: config.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: advanced_rag_service.py  ai_providers.py  async_document_processor.py  chat_service.py  csv_analytics_service.py  dataset_service.py  document_processor.py  embedding_service.py  enhanced_document_processor.py  enhanced_retrieval_service.py  job_tracker.py  llm_service.py  rag_service.py  redis_job_tracker.py  summarization_service.py  unified_file_processor.py  vector_store.py
backend/app/services/advanced_retrieval/: __init__.py  bm25_retriever.py  cascade_ranker.py  cross_encoder_ranker.py  diversity_ranker.py  dynamic_chunker.py  fusion_strategies.py  hierarchical_chunker.py  hybrid_retriever.py  hyde_generator.py  integrated_chunker.py  integrated_ranker.py  integrated_reranker.py  metrics.py  query_expansion.py  retrieval_optimizer.py  semantic_chunker.py
backend/app/tasks/: document_tasks.py
backend/docs/: ADVANCED_RETRIEVAL_IMPLEMENTATION_PLAN.md  PHASE_1_COMPLETION_PLAN.md
backend/scripts/: setup_ollama.sh
backend/tests/: test_advanced_retrieval.py  test_api.py  test_cross_encoder_reranking.py  test_document_processor.py  test_rag_service.py  test_semantic_chunking.py
docs/: ASYNC_MULTIAGENT_ARCHITECTURE.md  DEPLOYMENT.md  LLM_CONTEXT.md  TECHNICAL.md  USER_GUIDE.md
examples/: sample_document.txt  sample_queries.json
frontend/: .dockerignore  Dockerfile  eslint.config.js  (+5 more)
(+35 files in other folders)
